fixed title alignment

--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,7 @@ body {
 .title {
     font-size: 4rem;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 .pokemon-name {
